webkit-gtk/TODO
NEW in 2.52.1:

In file included from /usr/pkg/include/X11/Xlib.h:44,
                 from /usr/pkg/include/EGL/eglplatform.h:134,
                 from /usr/pkg/include/epoxy/egl_generated.h:11,
                 from /usr/pkg/include/epoxy/egl.h:46,
                 from /tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/skia/PlatformDisplaySkia.cpp:42,
                 from /tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-66.cpp:4:
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/SharedMemory.h:57:27: error: expected identifier before numeric constant
   57 | enum class MemoryLedger { None, Default, Network, Media, Graphics, Neural };
      |                           ^~~~
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/SharedMemory.h:57:27: error: expected '}' before numeric constant
In file included from /tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/ShareableBitmap.h:33,
                 from /tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/skia/ShareableBitmapSkia.cpp:27,
                 from /tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-66.cpp:5:
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/SharedMemory.h:57:25: note: to match this '{'
   57 | enum class MemoryLedger { None, Default, Network, Media, Graphics, Neural };
      |                         ^
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/SharedMemory.h:57:27: error: expected unqualified-id before numeric constant
   57 | enum class MemoryLedger { None, Default, Network, Media, Graphics, Neural };
      |                           ^~~~
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/SharedMemory.h:96:47: error: 'MemoryLedger' has not been declared
   96 |     WEBCORE_EXPORT void takeOwnershipOfMemory(MemoryLedger) const;
      |                                               ^~~~~~~~~~~~
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/SharedMemory.h:98:79: error: 'MemoryLedger' has not been declared
   98 |     WEBCORE_EXPORT void setOwnershipOfMemory(const WebCore::ProcessIdentity&, MemoryLedger) const;
      |                                                                               ^~~~~~~~~~~~
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/SharedMemory.h:169:1: error: expected declaration before '}' token
  169 | } // namespace WebCore
      | ^
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/ShareableBitmap.h:61:139: error: expected unqualified-id before numeric constant
   61 |     WEBCORE_EXPORT ShareableBitmapConfiguration(const IntSize&, std::optional<DestinationColorSpace> = std::nullopt, Headroom = Headroom::None, bool isOpaque = false);
      |                                                                                                                                           ^~~~
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/ShareableBitmap.h:105:37: error: expected unqualified-id before numeric constant
  105 |     Headroom m_headroom { Headroom::None };
      |                                     ^~~~
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/ShareableBitmap.h:105:37: error: expected '}' before numeric constant
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/ShareableBitmap.h:105:25: note: to match this '{'
  105 |     Headroom m_headroom { Headroom::None };
      |                         ^
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/ShareableBitmap.h:105:37: error: could not convert '{<expression error>}' from '<brace-enclosed initializer list>' to 'WebCore::Headroom'
  105 |     Headroom m_headroom { Headroom::None };
      |                                     ^~~~
      |                                     |
      |                                     <brace-enclosed initializer list>
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/ShareableBitmap.h:105:37: error: expected ';' before numeric constant
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:99:39: error: expected unqualified-id before numeric constant
   99 |         Headroom headroom { Headroom::None };
      |                                       ^~~~
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:99:39: error: expected '}' before numeric constant
In file included from /tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageSource.h:28,
                 from /tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/BitmapImage.h:31,
                 from /tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/Source/WebCore/platform/graphics/skia/ShareableBitmapSkia.cpp:29:
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:99:27: note: to match this '{'
   99 |         Headroom headroom { Headroom::None };
      |                           ^
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:99:39: error: could not convert '{<expression error>}' from '<brace-enclosed initializer list>' to 'WebCore::Headroom'
   99 |         Headroom headroom { Headroom::None };
      |                                       ^~~~
      |                                       |
      |                                       <brace-enclosed initializer list>
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:99:39: error: expected ';' before numeric constant
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:151:69: error: expected unqualified-id before numeric constant
  151 |     ImageOrientation m_orientation { ImageOrientation::Orientation::None };
      |                                                                     ^~~~
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:151:69: error: expected '}' before numeric constant
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:151:36: note: to match this '{'
  151 |     ImageOrientation m_orientation { ImageOrientation::Orientation::None };
      |                                    ^
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:151:69: error: could not convert '{<expression error>}' from '<brace-enclosed initializer list>' to 'WebCore::ImageOrientation'
  151 |     ImageOrientation m_orientation { ImageOrientation::Orientation::None };
      |                                                                     ^~~~
      |                                                                     |
      |                                                                     <brace-enclosed initializer list>
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:151:69: error: expected ';' before numeric constant
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h: In member function 'void WebCore::ImageFrame::Source::clear()':
/tmp/wip/webkit-gtk/work/webkitgtk-2.52.1/cmake-pkgsrc-build/WebCore/PrivateHeaders/WebCore/ImageFrame.h:118:38: error: expected unqualified-id before numeric constant
  118 |                 headroom = Headroom::None;
      |                                      ^~~~
compilation terminated due to -fmax-errors=20.



OLD:

pkg_add: webkit-gtk-2.50.4: missing required library: /tmp/wip/webkit-gtk/work/.buildlink/lib/libsqlite3.so

Test with $PREFIX/libexec/webkit2gtk-4.1/MiniBrowser:

start, but often gets 'WebProcess CRASHED' error
